@@ -148,8 +148,11 @@ Object.extend(Event, (function() {
   var cache = Event.cache;
 
   function getEventID(element) {
+    // Event ID is stored as the 0th index in a one-item array so that it
+    // won't get copied to a new node when cloneNode is called.
     if (element._prototypeEventID) return element._prototypeEventID[0];
     arguments.callee.id = arguments.callee.id || 1;
+    
     return element._prototypeEventID = [++arguments.callee.id];
   }
   
@@ -168,7 +171,12 @@ Object.extend(Event, (function() {
   }
   
   function createWrapper(element, eventName, handler) {
-    var id = getEventID(element);
+    var id = getEventID(element), _c = getCacheForID(id);
+
+    // Attach the element itself onto its cache entry so we can retrieve it for
+    // cleanup on page unload.
+    if (!_c.element) _c.element = element;
+
     var c = getWrappersForEventName(id, eventName);
     if (c.pluck("handler").include(handler)) return false;
     
@@ -200,16 +208,17 @@ Object.extend(Event, (function() {
   // Loop through all elements and remove all handlers on page unload. IE
   // needs this in order to prevent memory leaks.
   function purgeListeners() {
-    var all = document.getElementsByTagName('*');    
-    for (var i, node; node = all[i]; i++) {
-      if (node.nodeType !== Node.ELEMENT_NODE) continue;
-      Element.stopObserving(node);
+    var element, entry;
+    for (var i in Event.cache) {
+      entry = Event.cache[i];
+      Event.stopObserving(entry.element);
+      entry.element = null;
     }
   }
   
   function onStop() {
     document.detachEvent('onstop', onStop);
-    destroyCache();
+    purgeListeners();
   }
   
   function onBeforeUnload() {
